[package]
name = "tor-example-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tor = { git = "https://github.com/Sifir-io/sifir-rs-sdk" }
tor-stream = "0.3.0"
# openssl = { version = "0.10", features = ["vendored"] }
libtor = { version = "45.8.0+0.4.5.8", features = ["vendored-lzma","vendored-zstd"] }
# libtor = { version= "45.8.0+0.4.5.8", features=["vendored-openssl", "vendored-zstd"] }
